fix bug edit with raw yaml
